# vecpy

./: README.md  pyproject.toml  test.py
.github/workflows/: publish.yml
vecpy/: README.md  pyproject.toml  test.py
vecpy/benchmarks/: addition.py  subtraction.py
vecpy/vecpy_frameworks/: __init__.py
vecpy_frameworks/: bench_frame.py
vectorpython/: main.py
