[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
vecpy = "vecpy.main:main"

[project]
name = "VectorPython"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "kharvey2", email = "kharvey@nvidia.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/kharvey2/vecpy#readme"
Issues = "https://github.com/kharvey2/vecpy/issues"
Source = "https://github.com/kharvey2/vecpy"

[tool.hatch.version]
path = "vecpy/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:vecpy tests}"

[tool.coverage.run]
source_pkgs = ["vecpy", "tests"]
branch = true
parallel = true
omit = [
  "vectorpython/__about__.py",
]

[tool.coverage.paths]
vecpy = ["vecpy", "*/vecpy/vecpy"]
tests = ["tests", "*/vecpy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
